# mimiclaw

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  README_CN.md  README_JA.md
docs/: ARCHITECTURE.md  TODO.md
examples/: ws_client.py
main/: main.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c  agent_loop.h  agent_trace.c  agent_trace.h  context_builder.c  context_builder.h
main/bus/: message_bus.c  message_bus.h
main/cli/: serial_cli.c  serial_cli.h
main/cron/: cron_service.c  cron_service.h
main/gateway/: ws_server.c  ws_server.h
main/heartbeat/: heartbeat.c  heartbeat.h
main/linux/: linux_compat.h  linux_http.c  linux_http.h  linux_log.c  linux_nvs.c  linux_nvs.h  linux_paths.c  linux_paths.h  linux_ws.c  linux_ws.h
main/llm/: llm_proxy.c  llm_proxy.h
main/memory/: memory_store.c  memory_store.h  session_mgr.c  session_mgr.h
main/proxy/: http_proxy.c  http_proxy.h
main/skills/: skill_loader.c  skill_loader.h
main/telegram/: telegram_bot.c  telegram_bot.h
main/tools/: tool_cron.c  tool_cron.h  tool_files.c  tool_files.h  tool_get_time.c  tool_get_time.h  tool_registry.c  tool_registry.h  tool_run_javascript.c  tool_run_javascript.h  tool_web_search.c  tool_web_search.h
scripts/: view_agent_trace.py
spiffs_data/config/: SOUL.md
